[package]
name = "Tasco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
tui = "0.18.0"
clap = "3.2.16"
mp3-duration = "0.1.10"
rodio = { version = "0.15.0", features = ["mp3", "wav", "flac"] }
flume = "0.10.14"
rand = "0.8.5"
[dependencies.crossterm]
version = "0.24.0"
features = ["event-stream"] 
